@@ -18,6 +18,8 @@ Core and builtins
 Extension modules
 -----------------
 
+- Bug #834676: Fix crashes when normalizing Hangul syllables.
+
 - Bug #703198: Ignore "b" and "t" in os.popen on Unix.
 
 - Patch #803998: Deal with errors in SSL_write correctly.
